...
                    mainAxisSize: MainAxisSize.min,
                    children: [
                      SizedBox(
                          width: 120, child: Image.asset('assets/logo-2x.png')),
                      const SizedBox(height: 20),
                      Text(
                        'Kirjaudu sisään',
                        style: Theme.of(context).textTheme.headlineSmall,
                      ),
                      TextFormField(
                        validator: (value) {
                          if (value == null || value.isEmpty) {
                            return 'Anna sähköpostiosoite';
                          }
                          return null;
                        },
                        decoration:
                            const InputDecoration(labelText: 'Sähköposti'),
                        controller: _emailController,
                        key: const ValueKey("e-mail"),
                      ),
                      TextFormField(
                        validator: (value) {
                          if (value == null || value.isEmpty) {
                            return 'Anna salasana';
                          }
                          return null;
                        },
                        decoration:
                            const InputDecoration(labelText: 'Salasana'),
                        obscureText: true,
                        controller: _passwordController,
                        key: const ValueKey("password"),
                      ),
                      Padding(
                        padding: const EdgeInsets.all(0),
                        child: TextButton(
                          onPressed: () async {
                            if (!_formKey.currentState!.validate()) {
...
                                            child: const Text('Selvä'),
                                          ),
                                        ],
                                      ));
                            }
                          },
                          child: const Text('Kirjaudu'),
                        ),
                      ),
                      Padding(
                        padding: const EdgeInsets.all(0),
                        child: TextButton(
                          onPressed: () => _openForgotPasswordScreen(context),
                          child: const Text('Unohtuiko salasana?'),
                        ),
                      ),

                      /// Debug:
                      const Divider(),
                      Row(
...
                          children: [
                            TextButton(
                              onPressed: () {
                                _emailController.text = 'olli.o@esimerkki.fi';
                                _passwordController.text = 'salasana';
                              },
                              key: const ValueKey("debug teacher"),
                              child: const Text('Olli O. (opettaja)',
                                  style: TextStyle(color: Colors.orange)),
                            ),
                            TextButton(
                              onPressed: () {
                                _emailController.text = 'kaisa.k@esimerkki.fi';
...
                          const Divider(),
                          TextButton(
                            onPressed: () {
                              _emailController.text = 'kerttu.k@esimerkki.fi';
                              _passwordController.text = 'salasana';
                            },
                            key: const ValueKey("debug student"),
                            child: const Text('Kerttu K. (oppilas)',
                                style: TextStyle(color: Colors.orange)),
                          ),
                          TextButton(
                            onPressed: () {
                              _emailController.text = 'ville.v@esimerkki.fi';
...
