...
      },
      decoration: const InputDecoration(
        icon: Icon(Icons.speaker_notes_outlined),
        hintText: 'Kerro omin sanoin mitä tapahtui',
        labelText: 'Mitä tapahtui?',
      ),
      key: const ValueKey("Description"),
    );

/// Bully: Text field with autocomplete
Widget buildBullyField(BuildContext context, List<User> bullyOptions,
        TextEditingController controller) =>
    Autocomplete<User>(
...
              decoration: const InputDecoration(
                icon: Icon(Icons.person_outline),
                hintText: 'Kirjoita kiusaajan nimi',
                labelText: 'Kuka kiusasi? (valinnainen)',
                counterText: '',
              ),
              key: const ValueKey("Bully"),
            ),
        onSelected: ((option) => controller.text = option.id.toString()));

/// Bullied was not me: Checkbox
Widget buildBulliedWasNotMeField(
        BuildContext context, bool state, ValueSetter<bool?> onChanged) =>
    CheckboxListTile(
      title: const Padding(
          padding: EdgeInsets.only(left: 24),
          child: Text('Kiusattu oli joku muu kuin minä')),
      value: state,
      onChanged: onChanged,
      key: const ValueKey("BulliedCheckbox"),
    );

/// Bullied: Text field with autocomplete
Widget buildBulliedField(BuildContext context, List<User> bulliedOptions,
        TextEditingController controller, bool enabled) =>
    Autocomplete<User>(
...
              decoration: const InputDecoration(
                icon: Icon(Icons.person_outline),
                hintText: 'Kirjoita kiusatun nimi',
                labelText: 'Ketä kiusattiin? (valinnainen)',
                counterText: '',
              ),
              key: const ValueKey("Bullied"),
            ),
        onSelected: ((option) => controller.text = option.id.toString()));

Widget buildHandlerField(BuildContext context, List<User> handlerOptions,
        ValueSetter<User?> onChanged) =>
    DropdownButtonFormField<User>(
...
      decoration: const InputDecoration(
        icon: Icon(Icons.person_outline),
        hintText: 'Valitse opettaja',
        labelText: 'Kenelle haluat lähettää ilmoituksen?',
        counterText: '',
      ),
      key: const ValueKey("SendTo"),
    );

/// Anonymous: Checkbox
Widget buildAnonymousField(
        BuildContext context, bool state, ValueSetter<bool?> onChanged) =>
    CheckboxListTile(
      title: const Padding(
          padding: EdgeInsets.only(left: 24),
          child: Text('En halua että opettaja tietää nimeni')),
      value: state,
      onChanged: onChanged,
      key: const ValueKey("AnonCheckbox"),
    );

////////////////////////////////////////////////////////////////////////////////

class NewReportScreen extends StatefulWidget {
  const NewReportScreen({super.key});
...
                                  if (!_formKey.currentState!.validate()) {
                                    return;
                                  }
                                  // Process data.
                                  _submitForm();
                                },
                                child: const Text('Lähetä'),
                              ),
                            ),
                          ),
                        ],
                      ),
                    ));
...
